# espen

./: .gitignore  CADASTRO_UNICO_AE_CONSOLIDADO.xlsx  README.md  docker-compose.yml  index.html  instrucoes.md  package-lock.json  package.json
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  cpf_utils.py  crud.py  database.py  deps.py  main.py  middleware_https.py  models.py  schemas.py  security.py  seed.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  _crud.py  acoes.py  auth.py  matriz.py  pdi.py  storage.py  trilhas.py  users.py
backend/app/core/: config.py  middleware_https.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  relations.py  storage.py  user.py
backend/app/repositories/: storage.py  users.py
backend/app/routers/: acoes.py  auth.py  matriz.py  pdi.py  storage.py  trilhas.py  users.py
backend/app/schemas/: __init__.py  auth.py  storage.py  user.py
backend/app/services/: seed.py  users.py
backend/scripts/: 001_initial.sql  002_moderacao.sql  003_moderacao_historico.sql  import_legacy.py  run_sql_migration.py
backend/tests/: test_cpf.py  test_security.py
css/: style.css
frontend/: index.html  package-lock.json  package.json  vite.config.js
js/: acoes.js  app.js  auth.js  dashboard.js  data.js  matriz.js  pdi.js  trilhas.js  usuarios.js
scripts/: remove_logo_white_edges.py
templates/: BANCO DE DADOS - MCN-2026-SPB.xlsx  Modelo de Plano de ensino.docx
(+30 files in other folders)
